--- a/style.css
+++ b/style.css
@@ -425,3 +425,9 @@ footer .bg-dark .row{
 }
 
 .kkk { display: none }
+
+.riwayat{
+	border:1px solid #eaeaea;
+	margin-top: 10px;
+	padding: 10px;
+}
